[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
# proc-macro2 用来生成 TokenStream
proc-macro2 = "1.0.86"
# quote 用来生成 Rust 代码
quote = "1.0.35"
# syn 用来解析 TokenStream
syn = {version = "2.0.57",features = ["extra-traits"]}


[dev-dependencies]
anyhow = "1.0.81"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
